# SCU-ROS-2024-SW-Project

./: CMakeLists.txt  GroupidLeaderMessage.msg  README.md  assignment.launch  followerA.py  followerB.py  leader.py  package.xml
